--- a/Intro/Taylor Expansion of TOV (Initial Conditions) .ipynb
+++ b/Intro/Taylor Expansion of TOV (Initial Conditions) .ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,12 +311,12 @@
     "r_exp = (r-r0)\n",
     "p_exp = p0 + p1 * r_exp + p2 * r_exp**2 + p3 * r_exp**3\n",
     "m_exp = m0 + m1 * r_exp + m2 * r_exp**2 + m3 * r_exp**3\n",
-    "e_exp = e0 #+ e1 * r_exp + e2 * r_exp**2 + e3 * r_exp**3"
+    "e_exp = e0 + e1 * r_exp + e2 * r_exp**2 + e3 * r_exp**3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "3*m_3*r**2 + 2*m_2*r + m_1 + O(r**4)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,19 +349,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle 4 \\pi e_{0} r^{2} + O\\left(r^{4}\\right)$"
+       "$\\displaystyle 4 \\pi e_{1} r^{3} + 4 \\pi e_{0} r^{2} + O\\left(r^{4}\\right)$"
       ],
       "text/plain": [
-       "4*pi*e_0*r**2 + O(r**4)"
+       "4*pi*e_1*r**3 + 4*pi*e_0*r**2 + O(r**4)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "p_1 + 2*p_2*r + 3*p_3*r**2"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "(M + 4*pi*p*r**3)*(e + p)/(r*(2*M - r))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,19 +446,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle r \\left(- \\frac{4 \\pi e_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} - 4 \\pi p_{0}^{2}\\right) + r^{2} \\left(- \\frac{16 \\pi e_{0} p_{1}}{3} - 8 \\pi p_{0} p_{1}\\right) + r^{3} \\left(- \\frac{32 \\pi^{2} e_{0}^{3}}{9} - \\frac{128 \\pi^{2} e_{0}^{2} p_{0}}{9} - \\frac{32 \\pi^{2} e_{0} p_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{2}}{3} - 8 \\pi p_{0} p_{2} - 4 \\pi p_{1}^{2}\\right) + O\\left(r^{4}\\right)$"
+       "$\\displaystyle r \\left(- \\frac{4 \\pi e_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} - 4 \\pi p_{0}^{2}\\right) + r^{2} \\left(- \\frac{16 \\pi e_{0} p_{1}}{3} - 8 \\pi p_{0} p_{1}\\right) + r^{3} \\left(- \\frac{32 \\pi^{2} e_{0}^{3}}{9} - \\frac{128 \\pi^{2} e_{0}^{2} p_{0}}{9} - \\frac{4 \\pi e_{0} e_{2}}{3} - \\frac{32 \\pi^{2} e_{0} p_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{2}}{3} - 4 \\pi e_{2} p_{0} - 8 \\pi p_{0} p_{2} - 4 \\pi p_{1}^{2}\\right) + O\\left(r^{4}\\right)$"
       ],
       "text/plain": [
-       "r*(-4*pi*e_0**2/3 - 16*pi*e_0*p_0/3 - 4*pi*p_0**2) + r**2*(-16*pi*e_0*p_1/3 - 8*pi*p_0*p_1) + r**3*(-32*pi**2*e_0**3/9 - 128*pi**2*e_0**2*p_0/9 - 32*pi**2*e_0*p_0**2/3 - 16*pi*e_0*p_2/3 - 8*pi*p_0*p_2 - 4*pi*p_1**2) + O(r**4)"
+       "r*(-4*pi*e_0**2/3 - 16*pi*e_0*p_0/3 - 4*pi*p_0**2) + r**2*(-16*pi*e_0*p_1/3 - 8*pi*p_0*p_1) + r**3*(-32*pi**2*e_0**3/9 - 128*pi**2*e_0**2*p_0/9 - 4*pi*e_0*e_2/3 - 32*pi**2*e_0*p_0**2/3 - 16*pi*e_0*p_2/3 - 4*pi*e_2*p_0 - 8*pi*p_0*p_2 - 4*pi*p_1**2) + O(r**4)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,19 +478,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle r \\left(- \\frac{4 \\pi e_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} - 4 \\pi p_{0}^{2}\\right) + r^{3} \\left(- \\frac{32 \\pi^{2} e_{0}^{3}}{9} - \\frac{128 \\pi^{2} e_{0}^{2} p_{0}}{9} - \\frac{32 \\pi^{2} e_{0} p_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{2}}{3} - 8 \\pi p_{0} p_{2}\\right) + O\\left(r^{4}\\right)$"
+       "$\\displaystyle r \\left(- \\frac{4 \\pi e_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} - 4 \\pi p_{0}^{2}\\right) + r^{3} \\left(- \\frac{32 \\pi^{2} e_{0}^{3}}{9} - \\frac{128 \\pi^{2} e_{0}^{2} p_{0}}{9} - \\frac{4 \\pi e_{0} e_{2}}{3} - \\frac{32 \\pi^{2} e_{0} p_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{2}}{3} - 4 \\pi e_{2} p_{0} - 8 \\pi p_{0} p_{2}\\right) + O\\left(r^{4}\\right)$"
       ],
       "text/plain": [
-       "r*(-4*pi*e_0**2/3 - 16*pi*e_0*p_0/3 - 4*pi*p_0**2) + r**3*(-32*pi**2*e_0**3/9 - 128*pi**2*e_0**2*p_0/9 - 32*pi**2*e_0*p_0**2/3 - 16*pi*e_0*p_2/3 - 8*pi*p_0*p_2) + O(r**4)"
+       "r*(-4*pi*e_0**2/3 - 16*pi*e_0*p_0/3 - 4*pi*p_0**2) + r**3*(-32*pi**2*e_0**3/9 - 128*pi**2*e_0**2*p_0/9 - 4*pi*e_0*e_2/3 - 32*pi**2*e_0*p_0**2/3 - 16*pi*e_0*p_2/3 - 4*pi*e_2*p_0 - 8*pi*p_0*p_2) + O(r**4)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,68 +511,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle p_{0} - \\frac{2 \\pi r_{0}^{2} \\left(e_{0} + p_{0}\\right) \\left(e_{0} + 3 p_{0}\\right)}{3}$"
+       "$\\displaystyle - \\frac{\\pi e_{0}^{2} r}{3} - \\frac{4 \\pi e_{0} p_{0} r}{3} - \\pi p_{0}^{2} r$"
       ],
       "text/plain": [
-       "p_0 - 2*pi*r_0**2*(e_0 + p_0)*(e_0 + 3*p_0)/3"
+       "-pi*e_0**2*r/3 - 4*pi*e_0*p_0*r/3 - pi*p_0**2*r"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p2_new =  p0 - 2 * pi * r0**2 * (p0 + e0) * (3*p0 + e0)/3\n",
-    "p2_new"
+    "p2_new =  - 2 * pi * r**2 * (p0 + e0) * (3*p0 + e0)/3\n",
+    "expand(p2_new/(2*r))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle r \\left(- \\frac{4 \\pi e_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} - 4 \\pi p_{0}^{2}\\right) + r^{3} \\left(- \\frac{32 \\pi^{2} e_{0}^{3}}{9} - \\frac{128 \\pi^{2} e_{0}^{2} p_{0}}{9} - \\frac{32 \\pi^{2} e_{0} p_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} + \\frac{32 \\pi^{2} e_{0} r_{0}^{2} \\left(e_{0} + p_{0}\\right) \\left(e_{0} + 3 p_{0}\\right)}{9} - 8 \\pi p_{0}^{2} + \\frac{16 \\pi^{2} p_{0} r_{0}^{2} \\left(e_{0} + p_{0}\\right) \\left(e_{0} + 3 p_{0}\\right)}{3}\\right) + O\\left(r^{4}\\right)$"
+       "$\\displaystyle - \\pi p_{0}^{2} r - \\frac{4 \\pi e_{0} p_{0} r}{3} - \\frac{\\pi e_{0}^{2} r}{3} + O\\left(r^{3}\\right)$"
       ],
       "text/plain": [
-       "r*(-4*pi*e_0**2/3 - 16*pi*e_0*p_0/3 - 4*pi*p_0**2) + r**3*(-32*pi**2*e_0**3/9 - 128*pi**2*e_0**2*p_0/9 - 32*pi**2*e_0*p_0**2/3 - 16*pi*e_0*p_0/3 + 32*pi**2*e_0*r_0**2*(e_0 + p_0)*(e_0 + 3*p_0)/9 - 8*pi*p_0**2 + 16*pi**2*p_0*r_0**2*(e_0 + p_0)*(e_0 + 3*p_0)/3) + O(r**4)"
+       "-pi*p_0**2*r - 4*pi*e_0*p_0*r/3 - pi*e_0**2*r/3 + O(r**3)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "expr = expr.subs({p2:p2_new})\n",
-    "expr.series(r) + O(r**4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p_{0} - \\frac{2 \\pi r_{0}^{2} \\left(e_{0} + p_{0}\\right) \\left(e_{0} + 3 p_{0}\\right)}{3}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sympy.printing as printing\n",
-    "print(printing.latex(p2_new))"
+    "p2_calculated =expr.series(r, n=3)\n",
+    "simplify(factor(p2_calculated)/4)"
    ]
   },
   {
@@ -580,7 +562,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Computer p2 exactly matches p2 by Dr. Phil Landry as expected. "
+   ]
   }
  ],
  "metadata": {
