--- a/fmode_cowling_script_single.ipynb
+++ b/fmode_cowling_script_single.ipynb
@@ -14,17 +14,63 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 58%|█████▊    | 11700/20000 [00:00<00:00, 27985.34it/s]\n",
+      " 55%|█████▍    | 10909/20000 [00:00<00:00, 52593.27it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== INTEGRATION STATS ====\n",
+      "Star has mass 1.378 Msun and radius 11.699km\n",
+      "Interior Surface: 0.58807977\n",
+      "Exterior Surface: 0.65215653\n",
+      "v0: -1\n",
+      "Lamda: 0.42747066917930693\n",
+      "Boundary Term: -267.55135861897867\n",
+      "\n",
+      "Reached\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 58%|█████▊    | 11700/20000 [00:00<00:00, 27385.53it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== INTEGRATION STATS ====\n",
+      "Star has mass 1.378 Msun and radius 11.699km\n",
+      "Interior Surface: 0.65215654\n",
+      "Exterior Surface: 0.65215652\n",
+      "v0: -0.8965779849667994\n",
+      "Lamda: 0.4274706806680561\n",
+      "Boundary Term: -296.7082560467819\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "experiment = CowlingApproximation()\n",
-    "experiment.read_data()\n",
+    "experiment.read_data('/Users/utkarsh/PycharmProjects/fmodes/2205.02081/SLY4.csv')\n",
     "experiment.initial_conditions(k = -92)\n",
-    "experiment.tov()\n",
+    "experiment.tov(progress = False)\n",
     "experiment.print_params()\n",
     "experiment.update_initial_conditions()\n",
-    "experiment.tov()\n",
+    "experiment.tov(progress = True)\n",
     "experiment.print_params()\n",
-    "experiment.optimize_fmode()"
+    "experiment.optimize_fmode()\n",
+    "experiment.f"
    ]
   }
  ],
