--- a/GR1.ipynb
+++ b/GR1.ipynb
@@ -118,80 +118,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # DIMENSIONS CHECKED\n",
-    "# def _H0(r, nu, X, nl, Q, omega, lamda, H1, b, K):\n",
-    "#     omgr2_c2 = ((omega * r)**2)/(c**2)\n",
-    "#     factor = (2*b + nl + Q) ** (-1)\n",
-    "#     term1 = 8 * np.pi * (r**2) * np.exp(-nu/2) * X * (G/(c**4))\n",
-    "#     term2 = - H1 * (Q*(nl+1) - omgr2_c2 * np.exp(-nu-lamda))\n",
-    "#     term3 = K * (nl - omgr2_c2*np.exp(-nu)-Q*(np.exp(lamda)*Q-1))\n",
-    "#     return factor * (term1 + term2 + term3)\n",
-    "\n",
-    "# # DIMENSIONS CHECKED\n",
-    "# def _V(r, X, e, p, Q, nu, lamda, W, H0, omega):\n",
-    "#     factor = np.exp(nu/2) * (c**2)/(omega**2)\n",
-    "#     term1 = X/(e+p)\n",
-    "#     term2 = -Q/(r**2) * W * np.exp((nu+lamda)/2)\n",
-    "#     term3 = -np.exp(nu/2)*H0/2\n",
-    "#     return factor * (term1 + term2 + term3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # DIMENSIONS CHECKED\n",
-    "# def _dH1dr(r, l, b, lamda, p, e, H1, H0, K, V):\n",
-    "#     G_c4 = G/(c**4)\n",
-    "#     term1 = -H1*(l + 1 + 2*b*np.exp(lamda) + G_c4 * 4*np.pi*(r**2)*np.exp(lamda)*(p-e))\n",
-    "#     term2 = np.exp(lamda) * (H0 + K - G_c4*16*np.pi*(e+p)*V)\n",
-    "#     return (1/r) * (term1 + term2)\n",
-    "\n",
-    "# # DIMENSIONS CHECKED\n",
-    "# def _dKdr(r, H0, nl, H1, lamda, Q, l, K, e, p, W):\n",
-    "#     term1 = H0\n",
-    "#     term2 = (nl+1)*H1\n",
-    "#     term3 = (np.exp(lamda)*Q-l-1)*K\n",
-    "#     term4 = -8*np.pi*(e+p)*np.exp(lamda/2)*W*G/(c**4)\n",
-    "#     return (1/r) * (term1 + term2 + term3 + term4)\n",
-    "\n",
-    "# # DIMENSIONS CHECKED\n",
-    "# def _dWdR(r, W, l, lamda, V, e, p, X, cad2_inv, H0, K, nu):\n",
-    "#     term1 = -(l+1)*(W+l*np.exp(lamda/2)*V)\n",
-    "#     term2_fac = (r**2 * np.exp(lamda/2))\n",
-    "#     term2_1 = (np.exp(-nu/2)*X*(c**2) * cad2_inv)/(e+p)\n",
-    "#     term2_2 = H0/2\n",
-    "#     term2_3 = K\n",
-    "#     term2 = term2_fac * (term2_1 + term2_2 + term2_3)\n",
-    "#     return (1/r) * (term1 + term2)\n",
-    "\n",
-    "# # DIMENSIONS CHECKED\n",
-    "# def _dXdr(r, l, X, e, p, nu, lamda, Q, H0, omega, nl, H1, K, V, W, derivative_term):\n",
-    "#     omgr2_c2 = ((omega * r)**2)/(c**2)\n",
-    "#     G_c4 = G/(c**4)\n",
-    "#     term1 = -l*X\n",
-    "#     term2_fac = (e+p)*np.exp(nu/2)/2\n",
-    "#     term2_1 = (1-np.exp(lamda)*Q)*H0\n",
-    "#     term2_2 = H1 * (omgr2_c2*np.exp(-nu) + nl + 1)\n",
-    "#     term2_3 = K * (3*np.exp(lamda)*Q - 1)\n",
-    "#     term2_4 = -4 * (nl + 1) * np.exp(lamda) * Q * V/(r**2)\n",
-    "#     term2_5_fac = -2*W\n",
-    "#     term2_5_1 = np.exp(lamda/2 - nu)*(omega**2)/(c**2)\n",
-    "#     term2_5_2 = G_c4 * 4 * np.pi * (e+p) * np.exp(lamda/2)\n",
-    "#     term2_5_3 = -(r**2) * derivative_term\n",
-    "#     term2_5 =  term2_5_fac * (term2_5_1 + term2_5_2 + term2_5_3)\n",
-    "#     term2 = term2_fac * (term2_1 + term2_2 + term2_3 + term2_4 + term2_5)\n",
-    "#     return (1/r) * (term1 + term2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -311,8 +237,7 @@
     "    dWdr = _dWdR(r, W, l, lamda, V, e, P, X, cad2_inv, H0, K, nu)\n",
     "    dXdr = _dXdr(r, l, X, e, P, nu, lamda, Q, H0, omega, nl, H1, K, V, W, derv_term)\n",
     "    \n",
-    "    ret = np.array([dPdr, dMdr, dnudr, dH1dr, dKdr, dWdr, dXdr], dtype = float)\n",
-    "#     print(ret)\n",
+    "    ret = [dPdr, dMdr, dnudr, dH1dr, dKdr, dWdr, dXdr]\n",
     "    return ret"
    ]
   },
@@ -452,7 +377,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b57ec2136e00406ca2166cb86508bdc1",
+       "model_id": "8d582ad8fef94e4ebd205b06f4a38129",
        "version_major": 2,
        "version_minor": 0
       },
@@ -462,13 +387,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     },
     {
      "name": "stderr",
@@ -482,6 +400,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "== First Integration == \n",
       "Star has mass 1.378 Msun and radius 11.469km\n",
       "Interior Surface: 0.58178788\n",
@@ -494,7 +413,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24b999fba4ab47a189e4ec0f65e1c4e9",
+       "model_id": "ac5eaf03b4fd4b58a0e2ac136a792e31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -550,6 +469,56 @@
     "\n",
     "print(\"== Corrected Integration == \")\n",
     "print_params(p, m, r_arr, nu, h1, k, w, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zerilli equation\n",
+    "\n",
+    "# Dimensions UNCHECKED\n",
+    "def V_z(r, m_R, nl):\n",
+    "    b = _b(r, m_R)\n",
+    "    n = nl\n",
+    "    fac = (1-2*b)\n",
+    "    num = 2*(n**2)*(n+1) + 6*(n**2)*b + 18*n*(b**2) + 18*(b**3)\n",
+    "    dem = (r**2) * (n+3*b)**2\n",
+    "    return fac * num/dem\n",
+    "\n",
+    "# Dimensions UNCHECKED\n",
+    "def g(r, m_R, nl):\n",
+    "    b = _b(r, m_R)\n",
+    "    n = nl\n",
+    "    num = n * (n+1) + 3*n*b + 6*(b**2)\n",
+    "    dem = (n + 3*b)\n",
+    "    return num/dem\n",
+    "\n",
+    "# Dimensions UNCHECKED\n",
+    "def h(r, m_R, nl):\n",
+    "    b = _b(r, m_R)\n",
+    "    n = nl\n",
+    "    num = n - 3*n*b - 3*(b**2)\n",
+    "    dem = (1-2*b) * (n+3*b)\n",
+    "    return num/dem\n",
+    "\n",
+    "# Dimensions UNCHECKED\n",
+    "def k(r, m_R, nl):\n",
+    "    b = _b(r, m_R)\n",
+    "    n = nl\n",
+    "    return 1/(1-2*b)\n",
+    "\n",
+    "# Dimensions UNCHECKED\n",
+    "def H0_zerilli(r, omega, m_R, nl, H1, K):\n",
+    "    b = _b(r, m_R)\n",
+    "    n = nl\n",
+    "    term1 = H1*(((omega*r)**2) - (n+1)*b)\n",
+    "    term2 = K*(n*(1-2*b)-((omega*r)**2)+b*(1-3*b))\n",
+    "    num = term1 + term2\n",
+    "    dem = (1-2*b)*(3*b+n)\n",
+    "    return num/dem"
    ]
   },
   {
@@ -647,7 +616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bb76daf9a364d46a3dda05d6f93562f",
+       "model_id": "62d9b59d163e4a808057a96db4bb460c",
        "version_major": 2,
        "version_minor": 0
       },
